[package]
authors = ["zslayton <zack.slayton@gmail.com"]
description = "A full STOMP 1.2 client implementation. Allows programs to interact with message queueing services like ActiveMQ and RabbitMQ."
keywords = ["stomp", "mq", "activemq", "rabbitmq", "queue"]
license = "MIT"
name = "stomp"
readme = "README.md"
repository = "https://github.com/zslayton/stomp-rs"
version = "0.12.0"
edition = "2018"

[dependencies]
async-channel = "1.4.2"
async-fs = "1.3.0"
async-io = "1.1.2"
async-net = "1.6"
asynchronous-codec = "0.6.0"
smol = "1.2"
bytes = "0.4"
futures = "0.3"
log = "0.4"
nom = "3.2"

unicode-segmentation = "0.1"

[lib]
name = "stomp"
